# pigeonhole

./: Cargo.toml
libs/pigeonhole-metadata/: Cargo.toml
libs/pigeonhole-metadata/src/: error.rs  field.rs  geocoding.rs  image.rs  lib.rs  types.rs
libs/pigeonhole-nominatim/: Cargo.toml
libs/pigeonhole-nominatim/src/: client.rs
metadata-app/: Cargo.toml
metadata-app/src/: main.rs
